@@ -1,6 +1,10 @@
 2002-10-04 garlick
 	* Now properly handles the case of one ice box hanging.
 	  (tested with vpcd --bad_response)
+	* Don't call action callback from within dev_enqueue_actions
+	  (triggers act->cmd != NULL assertion in _act_finish).
+	  Error handling was inappropriate anyway - try silently ignoring
+	  unimplemented commands, and queuing actions for un-logged-in devices.
 
 2002-10-02 garlick
 	* Created Command data structure to represent what was called
